WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280758
[FFC] Fix flex line position for align-content: start/end when flex lines are reversed
https://bugs.webkit.org/show_bug.cgi?id=280758
Summary
[FFC] Fix flex line position for align-content: start/end when flex lines are...
alan
Reported
2024-10-02 08:47:20 PDT
ssia
Attachments
Patch
(8.92 KB, patch)
2024-10-02 08:52 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(10.44 KB, patch)
2024-10-02 10:36 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(9.79 KB, patch)
2024-10-02 15:22 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-02 08:52:04 PDT
Created
attachment 472769
[details]
Patch
alan
Comment 2
2024-10-02 10:36:04 PDT
Created
attachment 472772
[details]
Patch
alan
Comment 3
2024-10-02 15:22:17 PDT
Created
attachment 472773
[details]
[fast-cq]Patch
EWS
Comment 4
2024-10-02 15:25:44 PDT
Committed
284584@main
(c1771f8eee5c): <
https://commits.webkit.org/284584@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472773
[details]
.
Radar WebKit Bug Importer
Comment 5
2024-10-02 15:26:14 PDT
<
rdar://problem/137158091
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug