[FFC] Fix flex line position for align-content: start/end when flex lines are reversed https://bugs.webkit.org/show_bug.cgi?id=280758

Reviewed by Antti Koivisto.

Start and End flip when lines are reversed (as opposed to FlexStart and FlexEnd).
This patch also stops stretching lines when ContentDistribution is Normal (only ContentDistribution::Stretch is supposed to stretch flex lines to cover available cross axis space).

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.cpp:
(WebCore::Layout::FlexFormattingUtils::isMainReversedToContentDirection):
(WebCore::Layout::FlexFormattingUtils::areFlexLinesReversedInCrossAxis):
(WebCore::Layout::FlexFormattingUtils::isReversedToContentDirection): Deleted.
* Source/WebCore/layout/formattingContexts/flex/FlexFormattingUtils.h:
* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp:
(WebCore::Layout::FlexLayout::handleMainAxisAlignment const):
(WebCore::Layout::FlexLayout::handleCrossAxisAlignmentForFlexLines const):
* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:
(WebCore::LayoutIntegration::canUseForFlexLayoutWithReason):

Canonical link: https://commits.webkit.org/284584@main